<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#405955"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="#F2F2F2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#F2BEA0"
        android:text="@string/message"
        android:layout_gravity="center"/>


    <View
        android:id="@+id/view2"
        android:layout_width="458dp"
        android:layout_height="2.5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:background="#BFBFBF" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="#F2BEA0"/>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#BFBFBF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/firstName"
            android:textColor="#BFBFBF"
            />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#BFBFBF"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/lastName"
            android:textColor="#BFBFBF"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="129dp"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textSize="19sp"
                android:textStyle="bold"
                android:textColor="#F2BEA0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/male"
                android:textColor="#BFBFBF"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/female"
                android:textColor="#BFBFBF"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/no"
                android:textColor="#BFBFBF"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/studentId"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#F2BEA0"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/ID"
            android:textStyle="italic"
            android:textColor="#BFBFBF"
            android:backgroundTint="#BFBFBF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/school"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#F2BEA0"/>

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="19sp"
            android:backgroundTint="#BFBFBF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#F2BEA0"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:backgroundTint="#BFBFBF"
            android:text="@string/emailex"
            android:textColor="#BFBFBF"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#F2BEA0"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:backgroundTint="#BFBFBF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#F2BEA0"
            android:text="@string/register"
            android:textColor="#405955" />
    </LinearLayout>


</LinearLayout>